
	* Cache convertion from Evas_Map to RGBA_Map.

2012-06-15  Vincent Torri

	* Add Textgrid object.

2012-06-15  Mike Blumenkrantz

        * evas_object_smart_members_get() now returns NULL on non-smart objects

2012-04-26  Carsten Haitzler (The Rasterman)

        * Fix GL engine bitmap font handling

2012-06-19  Vincent Torri

	* Remove uselesss software DirectDraw 16 bits engine

2012-06-27  Sung W. Park (sung_)

	* Added (w, h) <= 0 check in EvasGL surface that was never handled before.
        * Handled evas_gl_make_current to return error when either surface 
        or context is NULL.  Before, when that was the case, it just did 
        make_current(NULL, NULL) internally. 

2012-04-28  Carsten Haitzler (The Rasterman)

        * Fix font instance refcounting for textprops that hang around.

2012-06-29  Jiyoun Park

	* upstream merge
	* Merge remote-tracking branch 'remotes/origin/upstream'

2012-07-03  Christopher Michael

	* Merge Tizen changes to upstream EFL.
	* Support gif scaling in evas gif loader.
	* Create vertex & fragment shader(s) in the gl_common engine.
	* Don't call glGetTexLevelParameteriv unless it is supported.
	* Support evas_cserve2 in the wayland_shm engine.
	* When freeing a gl_x11 window, make sure to call eglMakeCurrent with a null surface
		to inform EGL that this window is no longer valid.

2012-07-04  Cedric Bail

	* Make pipeline rendering use more extensively the prepare stage.

2012-07-04  Gustavo Lima Chaves

	* Add simple interfaces support to Evas smart classes

2012-07-05  ChunEon Park(Hermet)

	* Fixed Map pipe region issue. It caused the incorrect object rendering order
  	on gl backened.

2012-07-05  Cedric Bail

	* Strongly disable Evas pipe rendering.

2012-07-05  Cedric Bail

	* Don't let bad map sneek at render time and ban them as early as possible.

2012-07-07  ChunEon Park(Hermet)

	* Let Draw Text with viewport size instead of window size. When map is enabled then it should be rendered completely.
